Fix menu bar overlapping dat.gui

--- a/page/pages/reaction-diffusion/reaction-diffusion/css/reaction-diffusion.css
+++ b/page/pages/reaction-diffusion/reaction-diffusion/css/reaction-diffusion.css
@@ -36,6 +36,7 @@
 /* Style dat.GUI container */
 .dg {
     text-shadow: none !important;
+    z-index: 100000;
 }
 
 .dg.main .close-button {
